[package]
authors = ["simdimdim <simdimdim@gmail.com>"]
default-run = "main"
edition = "2018"
name = "ca04"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "a2135fd"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = {triplet = "x64-windows-static-md", install = ["sdl2"]}

[target.'cfg(windows)'.dependencies.sdl2]
features = ["static-link", "use-vcpkg"]
version = "0.34.3"

[dependencies]
gfx = "0.18.2"
gfx_device_gl = "0.16.2"
sdl2 = "0.34.3"

fps_counter = {version = "*", git = "https://github.com/PistonDevelopers/fps_counter"}
piston2d-deform_grid = "0.9.0"
piston2d-gfx_graphics = "0.72.0"
piston_window = "0.116.0"
pistoncore-window = "0.47.0"

nalgebra = "0.23.1"

itertools = "0.9.0"
lazy_static = "1.4.0"
rand = "0.7.3"
rayon = "1.5.0"
serde = "1.0.118"

camera_controllers = "0.32.0"
shader_version = "0.7.0"

config = "0.10.1"
find_folder = "0.3.0"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_window"
